--- a/client/package.json
+++ b/client/package.json
@@ -50,5 +50,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "http://localhost:8000",
+  "homepage": "https://august-storm-319410.el.r.appspot.com/"
 }
