--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "dompurify": "^2.2.9",
     "dotenv": "^8.2.0",
+    "emoji-picker-react": "^3.4.8",
     "react": "^17.0.2",
     "react-chat-engine": "^1.10.5",
     "react-dom": "^17.0.2",
@@ -51,5 +52,5 @@
     ]
   },
   "proxy": "http://localhost:8000",
-  "homepage": "https://august-storm-319410.el.r.appspot.com/"
+  "homepage": "https://microsof-teems.el.r.appspot.com/"
 }
