--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "express": "^4.17.1",
     "path": "^0.12.7",
     "socket.io": "^4.1.2"
+  },
+  "engines": {
+    "node": "16.3.0",
+    "npm": "7.15.1"
   }
 }
