Modified the files for deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ node_modules/
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+# Cloud files
+.gcloudignore
+app.yaml
+
